# taxi-demand-forecasting

./: .gitignore  Makefile  README.md  config.yaml  pyproject.toml
.github/workflows/: feature_pipeline.yaml  training_pipeline.yaml  training_pipeline.yml
artifacts/: model.pkl
notebooks/: certfile  feature-pipeline.ipynb  feature_pipeline.ipynb  ingest_transform_train.ipynb  keyfile  taxi-demand-forecasting.ipynb  taxi_demand_forecasting.ipynb
src/: app.py  config.py  feature_store_api.py  inference.py  ingest.py  logger.py  paths.py  train.py  transform.py  utils.py
src/pipelines/: feature_pipeline.py  training_pipeline.py
